Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-6482

Master check failure when marking an agent unreachable

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • 1.1.0
    • 1.1.0
    • master
    • None

    Description

      I1025 16:34:55.423038 44118 master.cpp:6006] Marked agent 8e219f7a-06c1-4009-9440-1a33b3e39be5-S473 (x.y.z.com) unreachable: health check timed out
      F1025 16:34:55.423632 44118 master.cpp:6036] Check failed: frameworks.recovered.contains(frameworkId) 
      

      Both the master and the agent are on 1.1.

      the context
        foreachkey (const FrameworkID& frameworkId, utils::copy(slave->tasks)) {
          Framework* framework = getFramework(frameworkId);
      
          // If the framework has not yet re-registered after master failover,
          // its FrameworkInfo will be in the `recovered` collection. Note that
          // if the master knows about a task, its FrameworkInfo must appear in
          // either the `registered` or `recovered` collections.
          FrameworkInfo frameworkInfo;
      
          if (framework == nullptr) {
            CHECK(frameworks.recovered.contains(frameworkId));
            frameworkInfo = frameworks.recovered[frameworkId];
          } else {
            frameworkInfo = framework->info;
          }
      
          ...
      

      Attachments

        Issue Links

          Activity

            People

              Unassigned Unassigned
              xujyan Yan Xu
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: