Fixed master that leaks empty entries in its hashmaps.

This fixes the CHECK failure mentioned in MESOS-6482.

Review: https://reviews.apache.org/r/53208/